# Running_App_Rust

./: Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.rs  main.rs
