[package]
name = "run_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
clap = "4.5.30"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
cargo-tarpaulin = "0.32.0"  # Updated to latest version